# slack-wf-trigger

./: .dockerignore  .env.sample  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml  pr.yml  release.yml  rust.yml
scripts/: binary.sh
spec/: spec-tool-slack-channel-watcher-docker.md  spec-tool-slack-channel-watcher.md
src/: config.rs  cursors.rs  lib.rs  main.rs  mrkdwn.rs  slack.rs  trigger.rs
tests/: integration.rs
