[package]
name = "slack-nf-trigger"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Watch Slack channels for messages matching text patterns and execute shell commands"
license = "MIT"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "process", "fs", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"